test/scc/ext/tm/semantic-errors/024.t
void foo()
{
}

void test() _Transaction_safe
{
    foo();
}